# SpaceEngineers-Stl-to-Blueprint

./: .gitignore  AdminHealth.cs  Cargo.toml  FalconCollision64.stl  athena.stl  mesh.stl  mexAsteroid.stl  sphere.stl  testgrid.stl
src/: AllArmors.xml  main.rs
