[package]
name = "SE-BlueprintGenerator"
version = "0.1.0"
authors = ["dbenson24 <derekbenson24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4.0"
float-ord = "0.3.1"
nalgebra = "0.26.2"
parry3d = "0.4.1"
rayon = "1.5.0"
serde = "1.0.126"
serde-xml-rs = "0.4.1"
serde_derive = "1.0.126"
stl_io = "0.6.0"
strum = "0.20.0"
strum_macros = "0.20.1"
